syntax = "proto3";

option go_package=".;miniRouterProto";

message InstanceInfo {
  string InstanceID = 1;
  string Host = 2;
  int32 Port = 3;
  int32 weight = 4;
}

message RegisterInstanceRequest{
  string ServiceName = 1;
  string Host = 2;
  int32 Port = 3;
  int32 weight = 4;
}

message RegisterInstanceReply{
  string InstanceID = 1;
  bool Existed = 2;
}

service RegisterService{
  rpc RegisterInstance(RegisterInstanceRequest) returns (RegisterInstanceReply){}
}

message GetInstancesRequest{
  string Name = 1;
  int64 revision = 2;
}

message GetInstancesReply{
  int64 revision = 1;
  repeated InstanceInfo Instances = 2;
}

service DiscoveryService{
  rpc GetInstances(GetInstancesRequest) returns (GetInstancesReply){}
}
